--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Yubiaobin.github.com by yubiaobin</title>
+    <title>Max前端博客</title>
   </head>
 
   <body>
