--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ title : Max的Blog
 
 <ul>
     {% for posts in site.posts %}
-    
-        <li>{{ page.date | date_to_string }} <a href="#">{{ post.title }}</a></li>
+
+        <li>{{ page.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 
     {% endfor %}
 </ul>
