--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@ title : Max的Blog
 
 
 
-<h2>{{page.title}}</h2>
+<h2>{{ page.title }}</h2>
 
 <p>最新文章</p>
 
 
 <ul>
-    {% for posts in site.posts %}
+    {% for post in site.posts %}
 
-        <li>{{ page.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+        <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
 
     {% endfor %}
 </ul>
