add index stylesheets

--- a/_posts/2014-08-18-git_alias_setting.html
+++ b/_posts/2014-08-18-git_alias_setting.html
@@ -4,6 +4,15 @@ title : git alias(别名设置命令)
 ---
 
 
+<section id="downloads" class="clearfix">
+	<a href="https://github.com/yubiaobin" id="view-on-github" class="button"><span>View on GitHub</span></a>
+
+	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
+</section>
+
+
+
+
 
 <p>git alias(别名设置命令)</p>
 <p>$ git config --global alias.st status </p>
