modified index and pahes style

--- a/_posts/2014-08-18-jekyll-command-line.html
+++ b/_posts/2014-08-18-jekyll-command-line.html
@@ -5,7 +5,6 @@ title : jekyll工具使用
 
 
 <section id="downloads" class="clearfix">
-	<a href="https://github.com/yubiaobin" id="view-on-github" class="button"><span>View on GitHub</span></a>
 
 	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
 </section>
@@ -14,5 +13,9 @@ title : jekyll工具使用
 
 <p>介绍jekyll工具使用篇章</p>
 <p>本地环境测试开启命令</p>
-<p>$ jekyll serve </p>
+<pre>
+	<code>
+		$ jekyll serve
+	</code>
+</pre>
 <p>{{ page.date | date_to_string }}</p>
