--- a/_posts/2014-08-18-git_alias_setting.html
+++ b/_posts/2014-08-18-git_alias_setting.html
@@ -5,7 +5,6 @@ title : git alias(别名设置命令)
 
 
 <section id="downloads" class="clearfix">
-	<a href="https://github.com/yubiaobin" id="view-on-github" class="button"><span>View on GitHub</span></a>
 
 	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
 </section>
@@ -15,8 +14,16 @@ title : git alias(别名设置命令)
 
 
 <p>git alias(别名设置命令)</p>
-<p>$ git config --global alias.st status </p>
+<pre>
+	<code>
+		$ git config --global alias.st status
+	</code>
+</pre>
 <p>将git status 简化为git st</p>
-<p>$ git config --global alias.cm commit </p>
+<pre>
+	<code>
+		$ git config --global alias.cm commit
+	</code>
+</pre>
 <p>将git commit 简化为git cm</p>
 <p>{{ page.date | date_to_string }}</p>
