add back images and some stylesheet

--- a/_posts/2014-08-18-git_alias_setting.html
+++ b/_posts/2014-08-18-git_alias_setting.html
@@ -4,9 +4,8 @@ title : git alias(别名设置命令)
 ---
 
 
-<section id="downloads" class="clearfix">
-
-	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
+<section class="downloads clearfix">
+	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
 </section>
 
 
