--- a/_posts/2014-08-18-hello-world.html
+++ b/_posts/2014-08-18-hello-world.html
@@ -4,10 +4,8 @@ title : 你好，世界
 ---
 
 
-<section id="downloads" class="clearfix">
-	<a href="https://github.com/yubiaobin" id="view-on-github" class="button"><span>View on GitHub</span></a>
-
-	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
+<section class="downloads clearfix">
+	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
 </section>
 
 
