--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-title : Max的Blog
 ---
 
 
@@ -36,13 +35,11 @@ title : Max的Blog
     	This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
     </p>
 
-	<pre>
-		<code>
+	<pre><code>
 			$ cd your_repo_root/repo_name
 			$ git fetch origin
 			$ git checkout gh-pages
-		</code>
-	</pre>
+		</code></pre>
 
 	<p>
 		If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.
@@ -61,17 +58,13 @@ title : Max的Blog
 
 
 
-	<h3>
-		<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?
-	</h3>
+	<h3>Rather Drive Stick?</h3>
 
 	<p>
 		If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.
 	</p>
 
-	<h3>
-		<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors
-	</h3>
+	<h3>Authors and Contributors</h3>
 
 	<p>
 		You can 
