--- a/_posts/2014-08-18-jekyll-command-line.html
+++ b/_posts/2014-08-18-jekyll-command-line.html
@@ -4,9 +4,8 @@ title : jekyll工具使用
 ---
 
 
-<section id="downloads" class="clearfix">
-
-	<a href="http://yubiaobin.github.com/" id="back-to-index" class="button"><span>Back to Index</span></a>
+<section class="downloads clearfix">
+	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
 </section>
 
 
