add baidu analyticsscript

--- a/_posts/2014-08-18-git_alias_setting.html
+++ b/_posts/2014-08-18-git_alias_setting.html
@@ -12,7 +12,7 @@ title : git alias(别名设置命令)
 
 
 
-<p>git alias(别名设置命令)</p>
+<h3>git alias(别名设置命令)</h3>
 <pre>
 	<code>
 		$ git config --global alias.st status
