--- a/_posts/2014-08-18-git-alias-setting.html
+++ b/_posts/2014-08-18-git-alias-setting.html
@@ -13,8 +13,33 @@ title : git alias(别名设置命令)
 
 
 <h3>git alias(别名设置命令)</h3>
+
+<p>
+	{% highlight ruby linenos %}
+	def show
+	  @widget = Widget(params[:id])
+	  respond_to do |format|
+	    format.html # show.html.erb
+	    format.json { render json: @widget }
+	  end
+	end
+	{% endhighlight %}
+</p>
+
+
 <pre>
 	<code>
+		{% highlight ruby %}
+		def show
+		  @widget = Widget(params[:id])
+		  respond_to do |format|
+		    format.html # show.html.erb
+		    format.json { render json: @widget }
+		  end
+		end
+		{% endhighlight %}
+
+		
 		$ git config --global alias.st status
 	</code>
 </pre>
