--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@ layout: default
 <ul>
     {% for post in site.posts %}
 
-        <li>{{ post.date | date_to_string }} <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a></li>
+        <li>
+        	{{ post.date | date_to_string }} 
+        	<a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+        </li>
 
 
     {% endfor %}
