add some modified

--- a/_posts/2014-08-18-jekyll-command-line.html
+++ b/_posts/2014-08-18-jekyll-command-line.html
@@ -17,4 +17,15 @@ title : jekyll工具使用
 		$ jekyll serve
 	</code>
 </pre>
+
+
+<p>博客插入高亮代码</p>
+
+<p>
+	{% highlight ruby linenos %}
+
+		{/% include header.html %} 
+
+	{% endhighlight %}
+</p>
 <p>{{ page.date | date_to_string }}</p>
