--- a/index.html
+++ b/index.html
@@ -7,46 +7,33 @@ layout: default
 
 
 
-
-
-<h1>最新文章</h1>
-
-
-
-<ul>
-    {% for post in site.posts %}
-
-        <li>
-        	{{ post.date | date_to_string }} 
-        	<a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-        </li>
-
-
-    {% endfor %}
-</ul>
-
-
 <section id="main_content">
 
-    <h3>
+	<h1>最新文章</h1>
+
+	<ul class="index_list">
+	    {% for post in site.posts %}
+	        <li>
+	        	<a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+	        	<span class="index_list_date"><span> - - - - </span>{{ post.date | date_to_string }}</span>	
+	        </li>
+	    {% endfor %}
+	</ul>
+
+
+
+
+
+
+
+
+
+
+<!--     <h3>
   		<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.
     </h3>
 
 
-
-    <p>
-    	This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:
-    </p>
-
-	<pre><code>
-			$ cd your_repo_root/repo_name
-			$ git fetch origin
-			$ git checkout gh-pages
-		</code></pre>
-
-	<p>
-		If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.
-	</p>
 
 
 
@@ -81,7 +68,10 @@ layout: default
 	<p>
 		Having trouble with Pages? Check out the documentation at 
 		<a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.
-	</p>
+	</p> -->
+
+
+
 
 
 
