add module page file

--- a/_posts/2014-08-16-hello-world.html
+++ b/_posts/2014-08-16-hello-world.html
@@ -1,20 +1,10 @@
 ---
-layout: default
+layout: default_post
 title : 你好，世界
 ---
 
 
-<section class="downloads clearfix">
-	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
-</section>
 
 
+<p>这是我的第一篇文章，想想该写点什么好呢...</p>
 
-
-
-
-
-
-<h3>我的第一篇文章</h3>
-
-<p>{{ page.date | date_to_string }}</p>
