--- a/_posts/2014-08-17-jekyll-command-line.html
+++ b/_posts/2014-08-17-jekyll-command-line.html
@@ -1,12 +1,8 @@
 ---
-layout: default
+layout: default_post
 title : jekyll工具使用
 ---
 
-
-<section class="downloads clearfix">
-	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
-</section>
 
 
 
@@ -28,4 +24,3 @@ title : jekyll工具使用
 
 	{% endhighlight %}
 </p>
-<p>{{ page.date | date_to_string }}</p>
