--- a/_posts/2014-08-18-git-alias-setting.html
+++ b/_posts/2014-08-18-git-alias-setting.html
@@ -1,12 +1,7 @@
 ---
-layout: default
+layout: default_post
 title : git alias(别名设置命令)
 ---
-
-
-<section class="downloads clearfix">
-	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
-</section>
 
 
 
@@ -50,4 +45,7 @@ title : git alias(别名设置命令)
 	</code>
 </pre>
 <p>将git commit 简化为git cm</p>
-<p>{{ page.date | date_to_string }}</p>
+
+
+
+
