--- a/_posts/2014-08-20-jekyll-includes.html
+++ b/_posts/2014-08-20-jekyll-includes.html
@@ -1,13 +1,7 @@
 ---
-layout: default
+layout: default_post
 title : jekyll include
 ---
-
-
-<section class="downloads clearfix">
-	<a href="{{ site.url }}/index.html" id="back-to-index" class="button"><span>Back to Index</span></a>
-</section>
-
 
 
 
@@ -20,4 +14,3 @@ title : jekyll include
 		{\% include header.html %} 
 	</code>
 </pre>
-<p>{{ page.date | date_to_string }}</p>
