--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default_index
 
 
 
-<section id="main_content">
+<div id="main_content">
 
 	<h1>最新文章</h1>
 
@@ -77,7 +77,7 @@ layout: default_index
 
 
 
-</section>
+</div>
 
 
 
