modified the first blog

--- a/_posts/2014-08-17-jekyll-command-line.html
+++ b/_posts/2014-08-17-jekyll-command-line.html
@@ -8,19 +8,9 @@ title : jekyll工具使用
 
 <h3>介绍jekyll工具使用篇章</h3>
 <p>本地环境测试开启命令</p>
-<pre>
-	<code>
-		$ jekyll serve
-	</code>
-</pre>
-
-
-<p>博客插入高亮代码</p>
 
 <p>
-	{% highlight ruby linenos %}
-
-		{/% include header.html %} 
-
+	{% highlight ruby  %}
+	$ jekyll serve
 	{% endhighlight %}
 </p>
