--- a/_posts/2014-08-18-git-command-line.html
+++ b/_posts/2014-08-18-git-command-line.html
@@ -55,6 +55,54 @@ title : git 基础常用命令
 </p>
 
 
+<h4>Add some changes in <file> to the next commit（添加当前file文件所有的更改去暂存区以备提交）</h4>
+<p>
+	{% highlight ruby %}
+	$ git add -p <file>
+	{% endhighlight %}
+</p>
+
+
+<h4>Add all changes in all range to the next commit（添加当前目录所有文件所有的更改去暂存区以备提交）</h4>
+<p>
+	{% highlight ruby %}
+	$ git add --all
+	{% endhighlight %}
+</p>
+
+
+
+<h4>Commit previously staged changes（提交之前暂存区的更改）</h4>
+<p>
+	{% highlight ruby %}
+	$ git commit
+	{% endhighlight %}
+</p>
+
+
+<h4>Commit all local changes in tracked files（提交之前所有本地追踪文件的更改）</h4>
+<p>
+	{% highlight ruby %}
+	$ git commit -a <file>
+	{% endhighlight %}
+</p>
+
+
+<h4>Change the last commit（查看上次提交的更改的部分）</h4>
+<p>
+	{% highlight ruby %}
+	$ git commit --amend
+	{% endhighlight %}
+</p>
+
+
+<h4>Add a message at this commit（添加这次提交更改的文字说明）</h4>
+<p>
+	{% highlight ruby %}
+	$ git commit -m
+	{% endhighlight %}
+</p>
+
 
 
 
