modified the git blog one and blog two

--- a/_posts/2014-08-18-git-command-line-one.html
+++ b/_posts/2014-08-18-git-command-line-one.html
@@ -6,7 +6,7 @@ title : git 基础常用命令（一）
 
 
 
-<h3>git create（git 创建命令）</h3>
+<h3>Git create（git 创建命令）</h3>
 
 <h4>Clone an existing repository（克隆远程已存在的版本库）</h4>
 <p>
@@ -30,7 +30,7 @@ title : git 基础常用命令（一）
 
 
 
-<h3>local changes（本地的更改命令）</h3>
+<h3>Local changes（本地的更改命令）</h3>
 
 <h4>Changed files in your working directory（本地目录更改状态）</h4>
 <p>
