--- a/_posts/2014-08-20-git-command-line-two.html
+++ b/_posts/2014-08-20-git-command-line-two.html
@@ -34,76 +34,63 @@ title : git 基础常用命令（二）
 
 <h3>Branches & Tags（分支和标识）</h3>
 
-<h4>Changed files in your working directory（本地目录更改状态）</h4>
+<h4>List all existing branches（列出所有现有的分支）</h4>
 <p>
 	{% highlight ruby %}
-	$ git status
+	$ git branch
 	{% endhighlight %}
 </p>
 
-<h4>Changes to tracked files（本地目录追踪文件更改的比较）</h4>
+<h4>Switch HEAD branch（切换到这个分支）</h4>
 <p>
 	{% highlight ruby %}
-	$ git diff
-	{% endhighlight %}
-</p>
-
-
-<h4>Add all current changes to the next commit（添加当前所有的更改去暂存区以备提交）</h4>
-<p>
-	{% highlight ruby %}
-	$ git add
+	$ git checkout <branch>
 	{% endhighlight %}
 </p>
 
 
-<h4>Add some changes in <file> to the next commit（添加当前file文件所有的更改去暂存区以备提交）</h4>
+<h4>Create a new branch based on your current HEAD（在当前版本库创建一个新的分支）</h4>
 <p>
 	{% highlight ruby %}
-	$ git add -p <file>
+	$ git branch <new-branch>
 	{% endhighlight %}
 </p>
 
 
-<h4>Add all changes in all range to the next commit（添加当前目录所有文件所有的更改去暂存区以备提交）</h4>
+<h4>Create a new tracking branch based on a remote branch（在远程版本库创建一个新的跟踪的分支）</h4>
 <p>
 	{% highlight ruby %}
-	$ git add --all
+	$ git branch --tracked <new-branch>  <remote-branch>
+ 	{% endhighlight %}
+</p>
+
+
+<h4>Delete a local branch（删除一个本地的分支）</h4>
+<p>
+	{% highlight ruby %}
+	$ git branch -d <branch>
+	{% endhighlight %}
+</p>
+
+
+<h4>Mark the current commit with a tag（标记最新的提交）</h4>
+<p>
+	{% highlight ruby %}
+	$ git tag <tag-name>
 	{% endhighlight %}
 </p>
 
 
 
-<h4>Commit previously staged changes（提交之前暂存区的更改）</h4>
+<h4>Push your local all tags to remote （发布本地所有的标记去远程本版库）</h4>
 <p>
 	{% highlight ruby %}
-	$ git commit
+	$ git push --tags
 	{% endhighlight %}
 </p>
 
 
-<h4>Commit all local changes in tracked files（提交之前所有本地追踪文件的更改）</h4>
-<p>
-	{% highlight ruby %}
-	$ git commit -a <file>
-	{% endhighlight %}
-</p>
 
-
-<h4>Change the last commit（查看上次提交的更改的部分）</h4>
-<p>
-	{% highlight ruby %}
-	$ git commit --amend
-	{% endhighlight %}
-</p>
-
-
-<h4>Add a message at this commit（添加这次提交更改的文字说明）</h4>
-<p>
-	{% highlight ruby %}
-	$ git commit -m
-	{% endhighlight %}
-</p>
 
 
 
