add git command blog three

--- a/_posts/2014-08-20-git-command-line-two.html
+++ b/_posts/2014-08-20-git-command-line-two.html
@@ -60,7 +60,7 @@ title : git 基础常用命令（二）
 <h4>Create a new tracking branch based on a remote branch（在远程版本库创建一个新的跟踪的分支）</h4>
 <p>
 	{% highlight ruby %}
-	$ git branch --tracked <new-branch>  <remote-branch>
+	$ git branch --tracked <new-branch>  <remote-branch>	
  	{% endhighlight %}
 </p>
 
@@ -82,7 +82,7 @@ title : git 基础常用命令（二）
 
 
 
-<h4>Push your local all tags to remote （发布本地所有的标记去远程本版库）</h4>
+<h4>Publish your local all tags to remote （发布本地所有的标记去远程本版库）</h4>
 <p>
 	{% highlight ruby %}
 	$ git push --tags
