modified the blog highlight layout

--- a/_posts/2014-08-17-jekyll-command-line.html
+++ b/_posts/2014-08-17-jekyll-command-line.html
@@ -10,7 +10,7 @@ title : jekyll工具使用
 <p>本地环境测试开启命令</p>
 
 <p>
-	{% highlight ruby  %}
+	{% highlight java  %}
 	$ jekyll serve
 	{% endhighlight %}
 </p>
