--- a/_posts/2014-08-22-git-command-line-three.html
+++ b/_posts/2014-08-22-git-command-line-three.html
@@ -10,14 +10,14 @@ title : git 基础常用命令（三）
 
 <h4>List all currently configured remotes（列出所有当前的远程配置）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git remote -v
 	{% endhighlight %}
 </p>
 
 <h4>Show information about a remote（显示远程版本库信息）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git remote show
 	{% endhighlight %}
 </p>
@@ -25,7 +25,7 @@ title : git 基础常用命令（三）
 
 <h4>Add mew remote repository , named <remote>（增加一个新的名为<remote>的远程版本）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git remote add <remote>
 	{% endhighlight %}
 </p>
@@ -33,7 +33,7 @@ title : git 基础常用命令（三）
 
 <h4>Download all changes from <remote> , but don't integrate into HEAD（从远程下载所有更改，但是不和本地合并）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git fetch <remote>
 	{% endhighlight %}
 </p>
@@ -41,7 +41,7 @@ title : git 基础常用命令（三）
 
 <h4>Download changes and directly merge/integrate into HEAD （从远程下载所有更改，并且和本地合并）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git pull <remote> <branch>
 	{% endhighlight %}
 </p>
@@ -50,7 +50,7 @@ title : git 基础常用命令（三）
 
 <h4>Publish local changes on a remote（发布本地的提交的更改去远程版本库）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git push <remote> <branch>
 	{% endhighlight %}
 </p>
@@ -58,7 +58,7 @@ title : git 基础常用命令（三）
 
 <h4>Delete a branch on the remote（删除远程的版本库的一个分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git push <remote> : <branch>
 	{% endhighlight %}
 </p>
@@ -67,7 +67,7 @@ title : git 基础常用命令（三）
 
 <h4>Publish your local all tags to remote （发布本地所有的标记去远程本版库）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git push --tags
 	{% endhighlight %}
 </p>
