--- a/_posts/2014-08-28-git-alias-setting.html
+++ b/_posts/2014-08-28-git-alias-setting.html
@@ -13,7 +13,7 @@ title : git alias(别名设置命令)
 
 <p>将git status 简化为git st</p>
 <p>
-	{% highlight ruby %}
+	{% highlight html %}
 	$ git config --global alias.st status
 	{% endhighlight %}
 </p>
@@ -21,7 +21,7 @@ title : git alias(别名设置命令)
 
 <p>将git commit 简化为git cm</p>
 <p>
-	{% highlight ruby %}
+	{% highlight html %}
 	$ git config --global alias.cm commit
 	{% endhighlight %}
 </p>
