--- a/_posts/2014-08-20-git-command-line-two.html
+++ b/_posts/2014-08-20-git-command-line-two.html
@@ -10,21 +10,21 @@ title : git 基础常用命令（二）
 
 <h4>Show all commits , staring with newest（从最近的提交开始显示所有的提交）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git log
 	{% endhighlight %}
 </p>
 
 <h4>Show changes over time for a specific file（特定文件的按时间显示提交历史）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git log -p <file>
 	{% endhighlight %}
 </p>
 
 <h4>Who changed what and when in <file>（什么时候谁更改了文件）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git blame <file>
 	{% endhighlight %}
 </p>
@@ -36,14 +36,14 @@ title : git 基础常用命令（二）
 
 <h4>List all existing branches（列出所有现有的分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git branch
 	{% endhighlight %}
 </p>
 
 <h4>Switch HEAD branch（切换到这个分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git checkout <branch>
 	{% endhighlight %}
 </p>
@@ -51,7 +51,7 @@ title : git 基础常用命令（二）
 
 <h4>Create a new branch based on your current HEAD（在当前版本库创建一个新的分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git branch <new-branch>
 	{% endhighlight %}
 </p>
@@ -59,7 +59,7 @@ title : git 基础常用命令（二）
 
 <h4>Create a new tracking branch based on a remote branch（在远程版本库创建一个新的跟踪的分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git branch --tracked <new-branch>  <remote-branch>	
  	{% endhighlight %}
 </p>
@@ -67,7 +67,7 @@ title : git 基础常用命令（二）
 
 <h4>Delete a local branch（删除一个本地的分支）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git branch -d <branch>
 	{% endhighlight %}
 </p>
@@ -75,7 +75,7 @@ title : git 基础常用命令（二）
 
 <h4>Mark the current commit with a tag（标记最新的提交）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git tag <tag-name>
 	{% endhighlight %}
 </p>
@@ -84,7 +84,7 @@ title : git 基础常用命令（二）
 
 <h4>Publish your local all tags to remote （发布本地所有的标记去远程本版库）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git push --tags
 	{% endhighlight %}
 </p>
