--- a/_posts/2014-08-25-git-command-line-four.html
+++ b/_posts/2014-08-25-git-command-line-four.html
@@ -10,14 +10,14 @@ title : git 基础常用命令（四）
 
 <h4>Merge <branch> into your current HEAD（合并分支去当前版本）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git merge <branch>
 	{% endhighlight %}
 </p>
 
 <h4>Rebase your current HEAD onto <branch>（重定义当前的版本）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git rebase <branch>
 	{% endhighlight %}
 </p>
@@ -26,21 +26,21 @@ title : git 基础常用命令（四）
 
 <h4>Abort a rebase（中支重定义）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git rebase --abort
 	{% endhighlight %}
 </p>
 
 <h4>Continue a rebase after resolving conflicts（解决冲突之后继续）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git rebase --continue
 	{% endhighlight %}
 </p>
 
 <h4>Changes to tracked files（本地目录追踪文件更改的比较）</h4>
 <p>
-	{% highlight ruby %}
+	{% highlight java %}
 	$ git diff
 	{% endhighlight %}
 </p>
