--- a/_posts/2014-08-29-git-config-setting.html
+++ b/_posts/2014-08-29-git-config-setting.html
@@ -13,12 +13,12 @@ title : git config(用户设置命令)
 
 <p>git 设置全局用户名</p>
 <p>
-	{% highlight ruby %}
+	{% highlight html %}
 	$ git config --global user.name
 	{% endhighlight %}
 </p>
 <p>
-	{% highlight ruby %}
+	{% highlight html %}
 	Example:  $ git config --global user.name "yubiaobin"
 	{% endhighlight %}
 </p>
@@ -26,7 +26,7 @@ title : git config(用户设置命令)
 
 <p>git 设置全局用户邮箱</p>
 <p>
-	{% highlight ruby %}
+	{% highlight html %}
 	Example:  $ git config --global user.email yubiaobin@163.com
 	{% endhighlight %}
 </p>
