--- a/_posts/2014-08-18-git-command-line-one.html
+++ b/_posts/2014-08-18-git-command-line-one.html
@@ -8,7 +8,7 @@ title : git 基础常用命令（一）
 
 <h3>Git create（git 创建命令）</h3>
 
-<h4>Clone an existing repository（克隆远程已存在的版本库）</h4>
+<p>Clone an existing repository（克隆远程已存在的版本库）</p>
 <p>
 	{% highlight java %}
 	$ git clone ssh://user@domail.com/repo.git
@@ -20,7 +20,7 @@ title : git 基础常用命令（一）
 	{% endhighlight %}
 </p>
 
-<h4>Create an new local repository（创建本地的本版库）</h4>
+<p>Create an new local repository（创建本地的本版库）</p>
 <p>
 	{% highlight java %}
 	$ git init
@@ -32,14 +32,14 @@ title : git 基础常用命令（一）
 
 <h3>Local changes（本地的更改命令）</h3>
 
-<h4>Changed files in your working directory（本地目录更改状态）</h4>
+<p>Changed files in your working directory（本地目录更改状态）</p>
 <p>
 	{% highlight java %}
 	$ git status
 	{% endhighlight %}
 </p>
 
-<h4>Changes to tracked files（本地目录追踪文件更改的比较）</h4>
+<p>Changes to tracked files（本地目录追踪文件更改的比较）</p>
 <p>
 	{% highlight java %}
 	$ git diff
@@ -47,7 +47,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Add all current changes to the next commit（添加当前所有的更改去暂存区以备提交）</h4>
+<p>Add all current changes to the next commit（添加当前所有的更改去暂存区以备提交）</p>
 <p>
 	{% highlight java %}
 	$ git add
@@ -55,7 +55,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Add some changes in <file> to the next commit（添加当前file文件所有的更改去暂存区以备提交）</h4>
+<p>Add some changes in <file> to the next commit（添加当前file文件所有的更改去暂存区以备提交）</p>
 <p>
 	{% highlight java %}
 	$ git add -p <file>
@@ -63,7 +63,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Add all changes in all range to the next commit（添加当前目录所有文件所有的更改去暂存区以备提交）</h4>
+<p>Add all changes in all range to the next commit（添加当前目录所有文件所有的更改去暂存区以备提交）</p>
 <p>
 	{% highlight java %}
 	$ git add --all
@@ -72,7 +72,7 @@ title : git 基础常用命令（一）
 
 
 
-<h4>Commit previously staged changes（提交之前暂存区的更改）</h4>
+<p>Commit previously staged changes（提交之前暂存区的更改）</p>
 <p>
 	{% highlight java %}
 	$ git commit
@@ -80,7 +80,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Commit all local changes in tracked files（提交之前所有本地追踪文件的更改）</h4>
+<p>Commit all local changes in tracked files（提交之前所有本地追踪文件的更改）</p>
 <p>
 	{% highlight java %}
 	$ git commit -a <file>
@@ -88,7 +88,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Change the last commit（查看上次提交的更改的部分）</h4>
+<p>Change the last commit（查看上次提交的更改的部分）</p>
 <p>
 	{% highlight java %}
 	$ git commit --amend
@@ -96,7 +96,7 @@ title : git 基础常用命令（一）
 </p>
 
 
-<h4>Add a message at this commit（添加这次提交更改的文字说明）</h4>
+<p>Add a message at this commit（添加这次提交更改的文字说明）</p>
 <p>
 	{% highlight java %}
 	$ git commit -m
