--- a/_posts/2014-05-25-git-command-line-four.html
+++ b/_posts/2014-05-25-git-command-line-four.html
@@ -8,14 +8,14 @@ title : git 基础常用命令（四）
 
 <h3>Merge & Rebase（合并，重定义）</h3>
 
-<h4>Merge <branch> into your current HEAD（合并分支去当前版本）</h4>
+<p>Merge <branch> into your current HEAD（合并分支去当前版本）</p>
 <p>
 	{% highlight java %}
 	$ git merge <branch>
 	{% endhighlight %}
 </p>
 
-<h4>Rebase your current HEAD onto <branch>（重定义当前的版本）</h4>
+<p>Rebase your current HEAD onto <branch>（重定义当前的版本）</p>
 <p>
 	{% highlight java %}
 	$ git rebase <branch>
@@ -24,21 +24,21 @@ title : git 基础常用命令（四）
 
 
 
-<h4>Abort a rebase（中支重定义）</h4>
+<p>Abort a rebase（中支重定义）</p>
 <p>
 	{% highlight java %}
 	$ git rebase --abort
 	{% endhighlight %}
 </p>
 
-<h4>Continue a rebase after resolving conflicts（解决冲突之后继续）</h4>
+<p>Continue a rebase after resolving conflicts（解决冲突之后继续）</p>
 <p>
 	{% highlight java %}
 	$ git rebase --continue
 	{% endhighlight %}
 </p>
 
-<h4>Changes to tracked files（本地目录追踪文件更改的比较）</h4>
+<p>Changes to tracked files（本地目录追踪文件更改的比较）</p>
 <p>
 	{% highlight java %}
 	$ git diff
