--- a/_posts/2013-05-17-jekyll-command-line.html
+++ b/_posts/2013-05-17-jekyll-command-line.html
@@ -10,41 +10,82 @@ title : jekyll工具使用
 
 
 <p>Mac电脑上首先要安装jekyll,命令如下：</p>
-
 <p>
 	{% highlight html %}
 	$ gem install jekyll
 	{% endhighlight %}
 </p>
 
-<p>如果提示没有执行权限的话，就在前面加上sodu</p>
 
+<p>如果提示没有执行权限的话，就在前面加上sodu</p>
 <p>
 	{% highlight html %}
 	$ sudo gem install jekyll
 	{% endhighlight %}
 </p>
 
-<p>安装完毕之后,用命令新建一个jekyll项目</p>
 
+<p>安装完毕之后,用命令新建一个jekyll项目</p>
 <p>
 	{% highlight html %}
 	$ jekyll new mywebsite
 	{% endhighlight %}
 </p>
 
-<p>然后切换到这个目录下</p>
 
+<p>可以看到提示已经新建一个jekyll目录</p>
+<p>
+	{% highlight html %}
+	Mac-Max:python max$ jekyll new mywebsite
+New jekyll site installed in /Users/max/python/mywebsite. 
+Mac-Max:python max$ 
+	{% endhighlight %}
+</p>
+
+
+
+
+
+<p>然后切换到这个目录下</p>
 <p>
 	{% highlight html %}
 	$ cd mywebsite
 	{% endhighlight %}
 </p>
 
-<p>本地环境测试开启命令</p>
 
+<p>本地环境测试开启命令</p>
 <p>
 	{% highlight html  %}
 	$ jekyll serve
 	{% endhighlight %}
 </p>
+
+
+<p>可以看到（用Ruby语言写的）jekyll已经运行并且生成了页面存放在_site文件夹中，并且调用了localhost:4000本地浏览器的端口来在本地电脑商实时的预览博客网站的效果</p>
+<p>
+	{% highlight html  %}
+	Mac-Max:mywebsite max$ jekyll serve
+Configuration file: /Users/max/python/mywebsite/_config.yml
+            Source: /Users/max/python/mywebsite
+       Destination: /Users/max/python/mywebsite/_site
+      Generating... 
+                    done.
+ Auto-regeneration: disabled. Use --watch to enable.
+Configuration file: /Users/max/python/mywebsite/_config.yml
+    Server address: http://0.0.0.0:4000/
+  Server running... press ctrl-c to stop.
+	{% endhighlight %}
+</p>
+
+
+<p>至此，jekyll就已经在电脑上搭建好了，并且可以在本地运行测试，后续抽时间再写一篇文章介绍怎么样部署到Github Pages上面去。</p>
+
+
+
+
+
+
+
+
+
