modified sudo characters

--- a/_posts/2013-05-17-jekyll-command-line.html
+++ b/_posts/2013-05-17-jekyll-command-line.html
@@ -17,7 +17,7 @@ title : jekyll工具使用
 </p>
 
 
-<p>如果提示没有执行权限的话，就在前面加上sodu</p>
+<p>如果提示没有执行权限的话，就在前面加上sudo</p>
 <p>
 	{% highlight html %}
 	$ sudo gem install jekyll
