modified jekyll blog

--- a/_posts/2013-05-17-jekyll-command-line.html
+++ b/_posts/2013-05-17-jekyll-command-line.html
@@ -33,7 +33,7 @@ title : jekyll工具使用
 </p>
 
 
-<p>可以看到提示已经新建一个jekyll目录</p>
+<p>可以看到提示已经新建一个jekyll目录(文件夹)名为mywebsite</p>
 <p>
 	{% highlight html %}
 	Mac-Max:python max$ jekyll new mywebsite
@@ -62,7 +62,7 @@ Mac-Max:python max$
 </p>
 
 
-<p>可以看到（用Ruby语言写的）jekyll已经运行并且生成了页面存放在_site文件夹中，并且调用了localhost:4000本地浏览器的端口来在本地电脑商实时的预览博客网站的效果</p>
+<p>可以看到jekyll已经运行并且生成了页面存放在_site文件夹中，并且调用了localhost:4000本地浏览器的端口来在本地电脑商实时的预览博客网站的效果</p>
 <p>
 	{% highlight html  %}
 	Mac-Max:mywebsite max$ jekyll serve
