add function language blog

--- a/_posts/2013-07-12-webkit-study1.html
+++ b/_posts/2013-07-12-webkit-study1.html
@@ -15,7 +15,7 @@ title : WEBKIT内核引擎学习（一）
 <p>首先来看定义：</p>
 <p>WebKit是一个排版引擎，主要设计是用来让网页浏览器绘制网页。 WebKit目前作为Apple Safari及Google Chrome（直到版本27）等浏览器的主要引擎。</p>
 
-<p>根据StatCounter[3]的浏览器市场份额调查，于2012年11月，Webkit市占超过了40%，它已经成为拥有最大市场份额的排版引擎，超越了Internet Explorer所使用的Trident及Firefox所使用的Gecko引擎。</p>
+<p>根据StatCounter[3]的浏览器市场份额调查，于2012年11月，Webkit市占超过了40%，它已经成为拥有最大市场份额的排版引擎，超越了Internet Explorer所使用的<strong>Trident</strong>及Firefox所使用的<strong>Gecko</strong>引擎。</p>
 
 <p>Opera软件公司于2013年初宣布，他们将停止他们自行开发的Presto排版引擎，由Webkit专案取代，在未来将会以Webkit来取代，并贡献给Webkit专案[34]。</p>
 
