--- a/_posts/2012-08-06-function-language-javascript.html
+++ b/_posts/2012-08-06-function-language-javascript.html
@@ -1,10 +1,10 @@
 ---
 layout: default_post
-title : Javascript与函数式编程
+title : 函数式编程的特性和优缺点
 ---
 
 
-<h3>Javascript与函数式编程</h3>
+<h3>函数式编程的特性和优缺点</h3>
 
 <h4>函数式编程语言特性一————函数式一等公民</h4>
 
@@ -15,5 +15,4 @@ title : Javascript与函数式编程
 
 
 
-<p>牢记：函数式编程不是用函数来编程！！！</p>
 <p><a href="http://www.php100.com/html/webkaifa/javascript/2009/0411/1698.html" target="_blank">参考</a></p>
