modified function language blog

--- a/_posts/2012-08-06-function-language-javascript.html
+++ b/_posts/2012-08-06-function-language-javascript.html
@@ -6,9 +6,8 @@ title : 函数式编程的特性和优缺点
 
 <h3>函数式编程的特性和优缺点</h3>
 
-<h4>函数式编程语言特性一————函数式一等公民</h4>
+<h4>函数式编程语言特性一————函数是一等公民</h4>
 
-<p>函数（function）是语言里面的</p>
 
 
 <h4>函数式编程语言特性二————闭包</h4>
