fixed function language blog number one

--- a/_posts/2012-07-26-function-language.html
+++ b/_posts/2012-07-26-function-language.html
@@ -8,7 +8,7 @@ title : 函数式编程语言
 
 <h4>什么是函数式编程</h4>
 
-<p>什么是函数式编程？如果你这么直白地询问，会发现它竟是一个不太容易解释的概念。许多在程序设计领域有着多年经验的老手，也无法很明白地说清楚函数式编程到底在研究些什么。</p>
+<p>什么是函数式编程（functional programming）呢？如果你这么直白地询问，会发现它竟是一个不太容易解释的概念。许多在程序设计领域有着多年经验的老手，也无法很明白地说清楚函数式编程到底在研究些什么。</p>
 
 
 <p>在很多的编程的学习资料或者课堂上，我们常常会听到老师会这样讲解编程语言就是一系列的计算机能够识别或者经过一些规则能够转化为计算机可以识别的指令集，然后由这样的编程语言编写出计算机程序。</p>
@@ -36,18 +36,47 @@ end
 <p>然而，在典型的函数式语言眼中，好像不是这么一回事儿，我们来看看一个同样的场景：<strong>function(function)</strong> &rArr; <strong>function</strong>这个过程中，函数接受另外一个函数作为参数，运算，最后在输出一个函数作为计算结果。可以这么理解：在函数式编程语言的世界里，根本就没有数字，对象等等这么东西（数据类型）或者这样的概念，只有一切皆是函数的概念。</p>
 
 
-<p>如果用代码来表示大概是这样的一个过程：</p>
+
+<p>举例说明：现在有这样一个数学表达式</p>
 <p>
 	{% highlight html %}
-	function one(a){
-	return function(b){
-		return a(b)
-	}
-}
+	(1 + 2) * 3 - 4
 	{% endhighlight %}
 </p>
 
-<p>所以看出函数式语言（以Lisp为典型代表）从一开始就采取了与多数语言完全不同的世界观，这也是使用对象语言时间久了以后，难以接受函数语言的原因，万物皆对象，很好理解；但是万物皆函数，却难以理解。</p>
+
+
+
+<p>传统的过程式编程，可能这样写：</p>
+<p>
+	{% highlight html %}
+	var a = 1 + 2;
+var b = a * 3;
+var c = b - 4;
+	{% endhighlight %}
+</p>
+
+
+
+<p>函数式编程要求使用函数，我们可以把运算过程定义为不同的函数，然后写成下面这样：</p>
+<p>
+	{% highlight html %}
+	function add(add1,add2){
+	return add1 + add2;
+};
+function multiply(mul1,mul2){
+	return mul1 * mul2;
+};
+function subtract(sub1,sub2){
+	return sub1 - sub2;
+};
+var result = subtract(multiply(add(1,2), 3), 4);
+	{% endhighlight %}
+</p>
+
+
+
+<p>所以看出函数式语言主要思想是：把运算过程尽量写成一系列嵌套的函数调用。它从一开始就采取了与多数语言完全不同的世界观，这也是使用对象语言时间久了以后，难以接受函数语言的原因，万物皆对象，很好理解；但是万物皆函数，却难以理解。</p>
 
 
 
