--- a/_posts/2013-07-16-webkit-study2.html
+++ b/_posts/2013-07-16-webkit-study2.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title : WEBKIT内核引擎学习（二）
+title : Webkit内核引擎学习（二）
 ---
 
 
 
 
-<h3>WEBKIT引擎之WebCore</h3>
+<h3>Webkit引擎之WebCore</h3>
 
 
 
