midified the function study blog

--- a/_posts/2012-08-06-function-language-feature.html
+++ b/_posts/2012-08-06-function-language-feature.html
@@ -7,7 +7,7 @@ title : 函数式编程的特性和优缺点
 
 
 
-<h4>函数是"第一等公民"</h4>
+<h4>一：函数是"第一等公民"</h4>
 <p>所谓"第一等公民"（first class），指的是函数与其他数据类型一样，处于平等地位，可以赋值给其他变量，也可以作为参数，传入另一个函数，或者作为别的函数的返回值。</p>
 <p>举例来说，下面代码中的print变量就是一个函数，可以作为另一个函数的参数。</p>
 <p>
@@ -19,7 +19,7 @@ title : 函数式编程的特性和优缺点
 
 
 
-<h4>只用"表达式"，不用"语句"</h4>
+<h4>二：只用"表达式"，不用"语句"</h4>
 <p>"表达式"（expression）是一个单纯的运算过程，总是有返回值；"语句"（statement）是执行某种操作，没有返回值。函数式编程要求，只使用表达式，不使用语句。也就是说，每一步都是单纯的运算，而且都有返回值。</p>
 <p>原因是函数式编程的开发动机，一开始就是为了处理运算（computation），不考虑系统的读写（I/O）。"语句"属于对系统的读写操作，所以就被排斥在外。</p>
 <p>当然，实际应用中，不做I/O是不可能的。因此，编程过程中，函数式编程只要求把I/O限制到最小，不要有不必要的读写行为，保持计算过程的单纯性。</p>
@@ -27,14 +27,14 @@ title : 函数式编程的特性和优缺点
 
 
 
-<h4>没有"副作用"</h4>
+<h4>三：没有"副作用"</h4>
 <p>所谓"副作用"（side effect），指的是函数内部与外部互动（最典型的情况，就是修改全局变量的值），产生运算以外的其他结果。</p>
 <p>函数式编程强调没有"副作用"，意味着函数要保持独立，所有功能就是返回一个新的值，没有其他行为，尤其是不得修改外部变量的值。</p>
 
 
 
 
-<h4>不修改状态</h4>
+<h4>四：不修改状态</h4>
 <p>上一点已经提到，函数式编程只是返回新的值，不修改系统变量。因此，不修改变量，也是它的一个重要特点。</p>
 <p>在其他类型的语言中，变量往往用来保存"状态"（state）。不修改变量，意味着状态不能保存在变量中。函数式编程使用参数保存状态，最好的例子就是递归。下面的代码是一个将字符串逆序排列的函数，它演示了不同的参数如何决定了运算所处的"状态"。</p>
 <p>
@@ -53,13 +53,30 @@ function reverse(string) {
 
 
 
-<h4>引用透明</h4>
+<h4>五：引用透明</h4>
 <p>引用透明（Referential transparency），指的是函数的运行不依赖于外部变量或"状态"，只依赖于输入的参数，任何时候只要参数相同，引用函数所得到的返回值总是相同的。</p>
 <p>有了前面的第三点和第四点，这点是很显然的。其他类型的语言，函数的返回值往往与系统状态有关，不同的状态之下，返回值是不一样的。这就叫"引用不透明"，很不利于观察和理解程序的行为。</p>
 
 
 
 
+
+
+
+
+
+<h3>函数式编程的优缺点</h3>
+<p>函数式编程到底有什么好处，为什么会变得越来越流行？总结一下，函数式编程具有以下五个优点</p>
+
+
+
+
+
+
+<h4>一：代码简洁，开发快速</h4>
+<p>函数式编程大量使用函数，减少了代码的重复，因此程序比较短，开发速度较快。</p>
+<p>Paul Graham在《黑客与画家》一书中写道：同样功能的程序，极端情况下，Lisp代码的长度可能是C代码的二十分之一。</p>
+<p>如果程序员每天所写的代码行数基本相同，这就意味着，"C语言需要一年时间完成开发某个功能，Lisp语言只需要不到三星期。反过来说，如果某个新功能，Lisp语言完成开发需要三个月，C语言需要写五年。"当然，这样的对比故意夸大了差异，但是"在一个高度竞争的市场中，即使开发速度只相差两三倍，也足以使得你永远处在落后的位置。"</p>
 
 
 
