modified the function language study blog number two

--- a/_posts/2012-08-06-function-language-feature.html
+++ b/_posts/2012-08-06-function-language-feature.html
@@ -81,7 +81,57 @@ function reverse(string) {
 
 
 
+<h4>二：接近自然语言，易于理解</h4>
+<p>函数式编程的自由度很高，可以写出很接近自然语言的代码。</p>
+<p>比如之前这样的表达式(1 + 2) * 3 - 4，写成函数式语言：</p>
+<p>
+	{% highlight html %}
+var result = subtract(multiply(add(1,2), 3), 4);
+	{% endhighlight %}
+</p>
+<p>对它进行变形，可以得到另一种写法：</p>
+<p>
+	{% highlight html %}
+var result = add(1,2).multiply(3).subtract(4);
+	{% endhighlight %}
+</p>
+<p>这基本就是自然语言的表达了。再看下面的代码，大家应该一眼就能明白它的意思吧：</p>
+<p>
+	{% highlight html %}
+merge([1,2],[3,4]).sort().search("2");
+	{% endhighlight %}	
+</p>
+<p>因此，函数式编程的代码更容易理解。</p>
 
+
+
+<h4>三：更方便的代码管理</h4>
+<p>函数式编程不依赖、也不会改变外界的状态，只要给定输入参数，返回的结果必定相同。因此，每一个函数都可以被看做独立单元，很有利于进行单元测试（unit testing）和除错（debugging），以及模块化组合。</p>
+
+
+
+
+
+<h4>四：易于"并发编程"</h4>
+<p>函数式编程不需要考虑"死锁"（deadlock），因为它不修改变量，所以根本不存在"锁"线程的问题。不必担心一个线程的数据，被另一个线程修改，所以可以很放心地把工作分摊到多个线程，部署"并发编程"（concurrency）。</p>
+<p>请看下面的代码：</p>
+<p>
+	{% highlight html %}
+	var s1 = fn1();
+	var s2 = fn2();
+	var s3 = concat(s1, s2);
+	{% endhighlight %}
+</p>
+<p>由于s1和s2互不干扰，不会修改变量，谁先执行是无所谓的，所以可以放心地增加线程，把它们分配在两个线程上完成。其他类型的语言就做不到这一点，因为s1可能会修改系统状态，而s2可能会用到这些状态，所以必须保证s2在s1之后运行，自然也就不能部署到其他线程上了。</p>
+<p>多核CPU是将来的潮流，所以函数式编程的这个特性非常重要。</p>
+
+
+
+
+
+
+<h4>五：代码的热升级</h4>
+<p>函数式编程没有副作用，只要保证接口不变，内部实现是外部无关的。所以，可以在运行状态下直接升级代码，不需要重启，也不需要停机。Erlang语言早就证明了这一点，它是瑞典爱立信公司为了管理电话系统而开发的，电话系统的升级当然是不能停机的。</p>
 
 
 
