modified the function language blog number two

--- a/_posts/2012-08-06-function-language-feature.html
+++ b/_posts/2012-08-06-function-language-feature.html
@@ -65,7 +65,7 @@ function reverse(string) {
 
 
 
-<h3>函数式编程的优缺点</h3>
+<h3>函数式编程的优点</h3>
 <p>函数式编程到底有什么好处，为什么会变得越来越流行？总结一下，函数式编程具有以下五个优点</p>
 
 
@@ -118,8 +118,8 @@ merge([1,2],[3,4]).sort().search("2");
 <p>
 	{% highlight html %}
 	var s1 = fn1();
-	var s2 = fn2();
-	var s3 = concat(s1, s2);
+var s2 = fn2();
+var s3 = concat(s1, s2);
 	{% endhighlight %}
 </p>
 <p>由于s1和s2互不干扰，不会修改变量，谁先执行是无所谓的，所以可以放心地增加线程，把它们分配在两个线程上完成。其他类型的语言就做不到这一点，因为s1可能会修改系统状态，而s2可能会用到这些状态，所以必须保证s2在s1之后运行，自然也就不能部署到其他线程上了。</p>
@@ -132,6 +132,18 @@ merge([1,2],[3,4]).sort().search("2");
 
 <h4>五：代码的热升级</h4>
 <p>函数式编程没有副作用，只要保证接口不变，内部实现是外部无关的。所以，可以在运行状态下直接升级代码，不需要重启，也不需要停机。Erlang语言早就证明了这一点，它是瑞典爱立信公司为了管理电话系统而开发的，电话系统的升级当然是不能停机的。</p>
+
+
+
+
+
+
+
+
+<h3>函数式编程的缺点</h3>
+<h4>一：语言学习曲线陡峭，难度高</h4>
+<p>函数式语言对开发者的要求比较高，学习曲线比较陡，而且很容易因为其灵活的语法控制不好程序的结构。</p>
+
 
 
 
