modified machine code blog

--- a/_posts/2013-07-16-webkit-study2.html
+++ b/_posts/2013-07-16-webkit-study2.html
@@ -67,5 +67,5 @@ title : Webkit内核引擎学习（二）
 
 
 
-<p>部分内容参考<a href="http://blog.csdn.net/bertzhang/article/details/6756732" target="_blank">Webkit-WebCore</a></p>
+<p class="pege_tail">部分内容参考<a href="http://blog.csdn.net/bertzhang/article/details/6756732" target="_blank">Webkit-WebCore</a></p>
 
