--- a/_posts/2012-06-18-machine-code.html
+++ b/_posts/2012-06-18-machine-code.html
@@ -3,7 +3,12 @@ layout: default_post
 title : 机器码和字节码
 ---
 
+
+
+
 <h3>什么是机器码</h3>
+
+
 
 <h4>机器码</h4>
 <p>机器码(machine code)，学名机器语言指令，是电脑的CPU可直接解读的数据，它由操作码(OP)和地址码两部分组成。</p>
@@ -12,7 +17,12 @@ title : 机器码和字节码
 
 
 
+
+
+
 <h3>什么是字节码</h3>
+
+
 
 <h4>字节码</h4>
 <p>字节码（Bytecode）是一种包含执行程序、由一序列 op 代码/数据对组成的二进制文件。字节码是一种中间码，它比机器码更抽象。</p>
@@ -21,4 +31,16 @@ title : 机器码和字节码
 
 
 
-<p class="pege_tail">参考<a href="http://www.linuxdiyf.com/1/article/2006/0702/article_696.html" target="_blank">汇编指令与机器码</a></p>
+
+
+
+
+
+<p class="pege_tail">参考<a href="http://zh.wikipedia.org/wiki/%E6%9C%BA%E5%99%A8%E8%AF%AD%E8%A8%80" target="_blank">维基百科</a></p>
+<p>参考<a href="http://www.linuxdiyf.com/1/article/2006/0702/article_696.html" target="_blank">汇编指令与机器码</a></p>
+
+
+
+
+
+
