modified mousehover blog

--- a/_posts/2012-06-24-mousehover-state.html
+++ b/_posts/2012-06-24-mousehover-state.html
@@ -15,6 +15,17 @@ title : 鼠标的四种状态
 <p>
 	{% highlight css %}
 	a:link    {color:#000;}
+a:visited {color:#000;}
+a:hover   {color:#000;}
+a:active  {color:#000;}
+	{% endhighlight %}
+</p>
+
+
+<p>当然你也可以这样写</p>
+<p>
+	{% highlight css %}
+	a:link    {color:#000;}
 a:active  {color:#000;}
 a:visited {color:#000;}
 a:hover   {color:#000;}
@@ -22,7 +33,7 @@ a:hover   {color:#000;}
 </p>
 
 
-
+<p>但是一般规则link定义在最前；hover在link之后；</p>
 
 
 
