modified HTML5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -9,7 +9,7 @@ title : Html5到底是什么
 <h3>Html5到底是什么</h3>
 
 <p>根据 <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" target="_blank">Mozilla基金会</a>	的定义，原文如下：HTML5 is the latest evolution of the standard that defines HTML.</p>
-<p>HTML5 是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
+<p>通俗的来说：HTML5 是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
 
 
 
