--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -14,7 +14,7 @@ title : Html5到底是什么
 
 
 
-<p>具体来说，HTML5添加了许多新的语法特征，其中包括<video>, <audio>,和<canvas>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
+<p>具体来说，HTML5添加了许多新的语法特征，其中包括<code><video></code>, <audio>,和<canvas>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
 <p>其它新的元素包括<section>, <article>, <header>, 和<nav>,是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。</p>
 <p>同时也有一些属性和元素被卸载掉了。一些元素，像<a>, 和<menu>被修改，重新定义或标准化了。同时APIs和DOM已经成为HTML5中的基础部分了。</p>
 
