--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -13,6 +13,8 @@ title : Html5到底是什么
 
 
 
+<p>具体来说，HTML5添加了许多新的语法特征，其中包括<code><video></code>, <code><audio></code>,和<code><canvas></code>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
+
 <!-- 
 <p>具体来说，HTML5添加了许多新的语法特征，其中包括<pre><video></pre>, <pre><audio></pre>,和<pre><canvas></pre>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
 <p>其它新的元素包括<pre><section></pre>, <pre><article></pre>, <pre><header></pre>, 和<pre><nav></pre>,是为了丰富文档的数据内容。新的属性的添加也是为了同样的目的。</p>
