modified the html5 blog

--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -12,8 +12,8 @@ title : Html5到底是什么
 <p>通俗的来说：HTML5 是对 HTML 标准的第五次修订，目前仍未完工。其主要的目标是将互联网语义化，以便更好地被人类和机器阅读，并同时提供更好地支持各种媒体的嵌入。</p>
 
 
-
-<p>具体来说，HTML5添加了许多新的语法特征，其中包括<code><video></code>, <code><audio></code>,和<code><canvas></code>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
+<!-- 
+<p>具体来说，HTML5添加了许多新的语法特征，其中包括<code><video></code>, <code><audio></code>,和<code><canvas></code>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p> -->
 
 <!-- 
 <p>具体来说，HTML5添加了许多新的语法特征，其中包括<pre><video></pre>, <pre><audio></pre>,和<pre><canvas></pre>元素，同时集成了SVG内容。这些元素是为了更容易的在网页中添加和处理多媒体和图片内容而添加的。</p>
