--- a/_posts/2014-09-09-html5-defined.html
+++ b/_posts/2014-09-09-html5-defined.html
@@ -26,7 +26,7 @@ title : Html5到底是什么
  -->
 
 
-
+<p>下面的一段代码展示了一体个基本的Html5页面的结构</p>
 <p>
 	{% highlight html %}
 	<!DOCTYPE HTML>
@@ -43,6 +43,20 @@ Your browser does not support the video tag.
 </html>
 	{% endhighlight %}
 </p>
+
+
+
+
+
+<h4>Html5新特性</h4>
+<p>HTML5 中的一些有趣的新特性：</p>
+<ul>
+	<li>用于绘画的 canvas 元素</li>
+	<li>用于媒介回放的 video 和 audio 元素</li>
+	<li>对本地离线存储的更好的支持</li>
+	<li>新的特殊内容元素，比如 article、footer、header、nav、section</li>
+	<li>新的表单控件，比如 calendar、date、time、email、url、search</li>
+</ul>
 
 
 
