--- a/_posts/2012-10-06-javascript-function.html
+++ b/_posts/2012-10-06-javascript-function.html
@@ -7,44 +7,37 @@ title : Javascript的匿名函数
 
 
 
-<h4>一：函数是"第一等公民"</h4>
-<p>所谓"第一等公民"（first class），指的是函数与其他数据类型一样，处于平等地位，可以赋值给其他变量，也可以作为参数，传入另一个函数，或者作为别的函数的返回值。</p>
-
-
-
-<h4>二：只用"表达式"，不用"语句"</h4>
-<p>"表达式"（expression）是一个单纯的运算过程，总是有返回值；"语句"（statement）是执行某种操作，没有返回值。函数式编程要求，只使用表达式，不使用语句。也就是说，每一步都是单纯的运算，而且都有返回值。</p>
-
-
-
-
-<h4>三：没有"副作用"</h4>
-<p>所谓"副作用"（side effect），指的是函数内部与外部互动（最典型的情况，就是修改全局变量的值），产生运算以外的其他结果。</p>
-
-
-
-
-<h4>四：不修改状态</h4>
-<p>上一点已经提到，函数式编程只是返回新的值，不修改系统变量。因此，不修改变量，也是它的一个重要特点。</p>
-
+<p>先来看看Javascript创建一个函数一般有以下两种方式：</p>
+<h4>函数声明</h4>
 <p>
 	{% highlight html %}
-function reverse(string) {
-　　　　if(string.length == 0) {
-　　　　　　return string;
-　　　　} else {
-　　　　　　return reverse(string.substring(1, string.length)) + string.substring(0, 1);
-　　　　}
-　　}
+function functionName(arg0,arg1){
+   //函数体
+}
 	{% endhighlight %}
 </p>
-<p>由于使用了递归，函数式语言的运行速度比较慢，这是它长期不能在业界推广的主要原因。</p>
+
+
+
+<h4>函数表达式</h4>
+<p>
+	{% highlight html %}
+var functionName = function(arg0,arg1){
+   //函数体
+}
+	{% endhighlight %}
+</p>
+
+
+<p>函数声明和函数表达式之间的主要区别是前者会在代码执行前被加载到作用域中，而后者是在代码执行到那一行的时候才会有定义。另一个区别是函数声明会给函数指定一个名字，而函数表达式则创建一个匿名函数，然后将这个函数赋给一个变量</p>
 
 
 
 
 
 
+
+<p class="pege_tail">参考<a href="http://blog.sina.com.cn/s/blog_912389e5010120n2.html" target="_blank">js之匿名函数</a></p>
 
 
 
