add some question in interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -1,18 +1,197 @@
 ---
 layout: default_post
-title : Web前段的一些面试考察的知识点
+title : Web前端的一些面试考察的知识点
 ---
 
 
 
 
-<h3>Web前段的一些面试考察的知识点</h3>
+<h3>Web前端的一些面试考察的知识点</h3>
+
+
+
+
+
+<h4>HTML:</h4>
+<p>1.  什么是语义化的HTML?有何意义？为什么要做到语义化？（高频率考题）</p>
+
+
+<p>2.  行内元素和块元素分别有哪些？（高频率）</p>
+
+
+
+<p>3.  严格模式与混杂模式的区分？如何触发这两种模式？（高频率）</p>
+
+
+<p>4.  Doctype 是什么？有啥作用</p>
+ 
+
+<p>5.  HTML与XHTML的区别</p>
+
+
+<p>6.  HTML5以什么标签开头？</p>
+
+
+<p>7.  Div与span的区别</p>
+
+
+<p>8.  Img的alt和title有啥区别？各自作用？</p>
+
+
+<p>9.  HTML5的离线储存</p>
+
+<p>10. iframe有那些缺点？</p>
+
+
+
+
+
+<h4>CSS:</h4>
+
+<p>1. CSS盒模型原理（高频率）</p>
+
+<p>2. CSS的导入方式：import与link方式的区别？优缺点？（高频率）</p>
+
+<p>3. CSS的优先级？内联和important哪个优先级高？（高频率）</p>
+
+
+<p>4. 盒子垂直居中方法（高频率）</p>
+
+
+<p>5. 浮动元素清除浮动方法（高频率）</p>
+
+<p>6. 常见兼容性问题（高频率）</p>
+
+
+<p>7. CSS的定位属性，各自区别，应用场景</p>
+
+
+<p>8. 谈谈CSS3 Media Queries</p>
+
+
+<p>9. Diplay:none与visibility：hidden的区别（高频率）</p>
+
+
+<p>10.谈谈CSS hack</p>
+
+
+<p>11.CSS中em和px的关系和区别</p>
+
+
+
+
+<h4>Javascript：</h4>
+<p>1. 闭包的理解，javascript的作用域（高频率）</p>
+<p>2. Ajax的跨域问题和缓存原理？同步与异步的区别？（高频率）</p>
+
+<p>3. 数组的增删查找（高频率）</p>
+
+
+<p>4. DOM节点的创建、移动、复制、删除、查找。（高频率）</p>
+
+
+<p>5. SetTimeout与setInterval区别</p>
+
+
+<p>6. 面向对象编程:b怎么继承a</p>
+
+
+<p>7. 编写一个JavaScript函数 parseQueryString，它的用途是把URL参数解析为一个对象varobj = parseQueryString(url);
+alert(obj.key0)  // 输出0</p>
+
+
+
+<p>8. JS关键字与保留字的选择：parent，class，void,main。</p>
+
+
+<p>9. ajax属于javascript？</p>
+
+
+<p>10.Var a = ‘abc def ghi’,把每三个字中的首字母转为大写。</p>
+
+
+
+
+<p>11.Ajax的执行过程</p>
+
+<p>12.JSON与XML的区别？优缺点？</p>
+
+<p>13.写一个tab菜单切换程序</p>
+
+
+<p>14.写一个点击input能够弹出当前input索引的函数</p>
+
+
+
+
+<p>15.==与===的区别</p>
+
+
+<p>16.Null与undefined的区别</p>
+
+
+<p>17.Js如何实现多重继承</p>
+
+
+<p>18.Eval是啥？谈谈对它的理解</p>
+
+<p>19.事件、IE与火狐的事件机制有什么区别？</p>
 
 
 
 
 
 
+
+<h4>其他</h4>
+
+
+<p>1. 对bootstrap的理解（高频率）</p>
+
+<p>2. 网站性能优化的方法（高频率）</p>
+
+<p>3. 响应式布局（高频率）</p>
+
+
+<p>4. 前端由哪些部分组成（高频率）</p>
+
+<p>5. W3C标准是啥</p>
+
+
+<p>6. 渐进增强与优雅降级的理解</p>
+
+
+
+<p>7. 为什么利用多个域名来提供网站资源会更有效？</p>
+
+
+
+
+
+<p>8. http中的404状态码是什么意思</p>
+
+
+
+<p>9. 常用的测试工具、开发工具有哪些？</p>
+
+
+<p>10.Jpeg、gif、png格式的优缺点，应用场景</p>
+
+
+<p>11.谈谈对前端的理解</p>
+
+
+<p>12.你认为做前端最需要的品质</p>
+
+
+
+
+
+<p>13.你最近看过的文章是什么</p>
+
+
+
+<p>14.有没有逛技术网站的习惯？请列举这些网站</p>
 
 
 
